compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__name_to_escape.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"./the/module.nix\", \"one\")\npub fn inherit() -> Nil\n\n@external(nix, \"./the/module.nix\", \"one\")\npub fn builtins() -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(nix, "./the/module.nix", "one")
pub fn inherit() -> Nil

@external(nix, "./the/module.nix", "one")
pub fn builtins() -> Nil


----- COMPILED NIX
let
  inherit' = (builtins.import ./the/module.nix).one;
  builtins' = (builtins.import ./the/module.nix).one;
in
{ inherit builtins' inherit'; }
