compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__no_body.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"./one\", \"one\")\npub fn one(x: Int) -> Int\n"
---
let inherit (builtins.import ./one) one; in { inherit one; }
