compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__externals__pipe_variable_shadow.snap
---
source: compiler-core/src/nix/tests/externals.rs
expression: "\n@external(nix, \"./module\", \"string\")\nfn name() -> String\n\npub fn main() {\n  let name = name()\n  name\n}\n"
---
let
  name = (builtins.import ./module).string;
  
  main = {}: let name'1 = name {}; in name'1;
in { inherit main; }
